--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-generate-auth": "^0.3.1",
+    "sails-mongo": "^0.11.4",
     "validator": "^4.0.6"
   },
   "scripts": {
